pathmod_derive/tests/ui/enum_non_enum.stderr
error: #[derive(EnumAccess)] can only be used on enums
 --> tests/ui/enum_non_enum.rs:3:10
  |
3 | #[derive(EnumAccess)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `EnumAccess` (in Nightly builds, run with -Z macro-backtrace for more info)
