pathmod_derive/tests/ui/enum_non_enum.rs
use pathmod::prelude::*;

#[derive(EnumAccess)]
struct NotEnum { a: i32 }

fn main() {}
